add method to sort and track timestamps of documents. add bulk index test